Added support for more features for perspective correction

--- a/config.yaml
+++ b/config.yaml
@@ -1,16 +1,20 @@
 # --- Input Files ---
-mesh_path: path/to/your/mesh.obj         # Accepts .obj, .ply, .stl
-cameras_path: path/to/your/cameras_file  # Camera info file path
+mesh_path: temp/plot1_18_240424_t2_low_poly.obj         # Accepts .obj, .ply, .stl
+cameras_path: temp/plot1_18_240424_t2.cams.xml  # Camera info file path
 camera_format: agisoft                   # Format (only 'agisoft' supported currently)
 
 # --- Output ---
 output_folder: output/                   # Where depth maps/renders will be saved
-save_scene: false                        # Set to true to save RGB renders (slower, memory intensive)
+save_scene: true                        # Set to true to save RGB renders (slower, memory intensive)
 
 perspective_correction:
   enabled: true                            # Enable/disable perspective correction
-  reference_image: path/to/reference.jpg   # Reference image for alignment
+  reference_image: temp/images/IMG_8551.jpg   # Reference image for alignment
                                            # (Filename must match a camera label in cameras_path)
-  minimum_match_count: 10                  # Min ORB matches needed for homography
-  match_count: 20                          # Max ORB matches to use for homography
+  transform: affine                        # The transform type ('affine' or 'projective')
+  minimum_match_count: 4                   # Min ORB matches needed for homography
+  distance_ratio: 0.75                     # Ratio used for Lowe's ratio test when matching points.
   ransac_threshold: 5.0                    # RANSAC threshold for homography outliers
+  max_iterations: 10000                    # Maximum number of iterations for RANSAC
+  padding: 0                            # The amount of padding (in pixels) around the borders.
+                                           # Will be cropped to adjust for warping by homography
