--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-trimesh
-embreex
+trimesh>=4.6.0,<4.7.0
+embreex>=2.17.0,<2.18.0
+pyglet<2.0.0
+scikit-image>=0.25.0,<0.26.0
 opencv-python>=4.11.0,<4.12.0
+scipy>=1.15.0,<1.16.0
 PyYAML>=6.0.0,<6.1.0
